@@ -1,3 +1,6 @@
+2003-12-16  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/Aneestors.py: Use write_note() when appropriate.
+
 2003-12-15  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/GrampsCfg.py: change the default prefixes so that they
 	sort nicely numerically.
